--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "env": "^0.0.2",
     "express": "^4.18.2",
     "mysql2": "^2.3.3",
+    "nodemon": "^2.0.20",
     "sequelize": "^6.27.0",
     "sequelize-cli": "^6.5.2"
   }
